--- a/02_apps/a_count/b_componentes/android/app/src/main/AndroidManifest.xml
+++ b/02_apps/a_count/b_componentes/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,7 @@
+     <!-- permiso de lasimagenes -->
+
+<uses-permission android:name="android.permission.INTERNET"/>
+     <!-- permiso de lasimagenes -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="b_componentes"
